# rcli

./: Cargo.toml  README.md  cliff.toml
src/: lib.rs  main.rs  opts.rs
src/cli/: b64.rs  csv.rs  genpass.rs  mod.rs
src/process/: b64.rs  csv_convert.rs  gen_pass.rs  mod.rs
