[package]
name = "rcli"
version = "0.1.0"
edition = "2021"
authors = ["zyh"]
license = "MIT"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.114"
serde_yaml = "0.9.33"
anyhow = "1.0.82"
enum_dispatch = "0.3.12"
log = "0.4.21"


